HW2 completed solutions

--- a/software/hw/[HW_Code1]_2-D_Perceptron_Training_with_Gradient_Descent.ipynb
+++ b/software/hw/[HW_Code1]_2-D_Perceptron_Training_with_Gradient_Descent.ipynb
@@ -2,10 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "agreed-korean",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (fc1): Linear(in_features=2, out_features=1, bias=False)\n",
+      ")\n",
+      "[Parameter containing:\n",
+      "tensor([[-0.0783,  0.6538]], requires_grad=True)]\n",
+      "Epoch 0 - loss: 7.793026447296143\n",
+      "Epoch 1 - loss: 19.631290435791016\n",
+      "Epoch 2 - loss: 17.25773811340332\n",
+      "Epoch 3 - loss: 10.022737503051758\n",
+      "Epoch 4 - loss: 4.214532852172852\n",
+      "Epoch 5 - loss: 1.2357540130615234\n",
+      "Epoch 6 - loss: 0.1974683254957199\n",
+      "Epoch 7 - loss: 0.0017837462946772575\n",
+      "Epoch 8 - loss: 0.023591414093971252\n",
+      "Epoch 9 - loss: 0.04538334533572197\n",
+      "Epoch 10 - loss: 0.03871006518602371\n",
+      "Epoch 990 - loss: 1.4551915228366852e-11\n",
+      "Epoch 991 - loss: 1.4551915228366852e-11\n",
+      "Epoch 992 - loss: 1.4551915228366852e-11\n",
+      "Epoch 993 - loss: 1.4551915228366852e-11\n",
+      "Epoch 994 - loss: 1.4551915228366852e-11\n",
+      "Epoch 995 - loss: 1.4551915228366852e-11\n",
+      "Epoch 996 - loss: 1.4551915228366852e-11\n",
+      "Epoch 997 - loss: 1.4551915228366852e-11\n",
+      "Epoch 998 - loss: 1.4551915228366852e-11\n",
+      "Epoch 999 - loss: 1.4551915228366852e-11\n",
+      "When x = tensor([1.0000, 2.1000]), y = tensor([3.0000], grad_fn=<SqueezeBackward4>)\n",
+      "When x = tensor([2.0000, 3.5000]), y = tensor([6.0000], grad_fn=<SqueezeBackward4>)\n",
+      "When x = tensor([3., 3.]), y = tensor([9.0000], grad_fn=<SqueezeBackward4>)\n",
+      "When x = tensor([4.0000, 2.1000]), y = tensor([12.], grad_fn=<SqueezeBackward4>)\n",
+      "When x = tensor([5.0000, 7.2000]), y = tensor([15.0000], grad_fn=<SqueezeBackward4>)\n",
+      "When x = tensor([ 6.0000, 10.1000]), y = tensor([18.0000], grad_fn=<SqueezeBackward4>)\n"
+     ]
+    }
+   ],
    "source": [
     "### Training with manually updating W with \"Backward\" ###\n",
     "\n",
@@ -21,11 +60,15 @@
     "\n",
     "data = [(1.0,2.1,3.0), (2.0, 3.5, 6.0), (3.0, 3.0, 9.0), (4.0, 2.1, 12.0), (5.0, 7.2, 15.0), (6.0, 10.1, 18.0)]\n",
     "\n",
-    "\n",
     "class Net(nn.Module):\n",
-    "...\n",
-    "\n",
-    "net = Net()\n",
+    "    def __init__(self):  # define Neural Net structure\n",
+    "        super(Net, self).__init__()  # initialise with inherit from super class\n",
+    "        self.fc1 = nn.Linear(2,1,bias=False)  # in dim = 2 in our case, out dim, fully connected linear layer with no bias\n",
+    "    def forward(self, x):  # define forward propagation through the network\n",
+    "        x = self.fc1(x)  # input moves through fully connected layer\n",
+    "        return x\n",
+    "        \n",
+    "net = Net()  # instantiate a neural net object as defined earlier\n",
     "\n",
     "print(net)\n",
     "print(list(net.parameters()))\n",
@@ -35,19 +78,43 @@
     "\n",
     "#def criterion(out, label):\n",
     "#    return (label - out)**2\n",
-    "criterion = nn.MSELoss()\n",
+    "criterion = nn.MSELoss()  # loss criterion defined as mean squared error\n",
     "\n",
     "\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.5)\n",
     "#optimizer = optim.Adam(net.parameters(), lr=0.005)\n",
     "\n",
-    "..."
+    "verbose = 0\n",
+    "num_epochs = 1000\n",
+    "for epoch in range(num_epochs): \n",
+    "    for i, current_data in enumerate(data):\n",
+    "        #print(f\"i: {i}, Data: {current_data}\")\n",
+    "        X_in_1, X_in_2, Y_target = current_data\n",
+    "        #print(f\"X_1 : {X_in_1}, X_2 : {X_in_2}, Y : {Y_target}\")\n",
+    "        X_in, Y_target = torch.FloatTensor([X_in_1, X_in_2]), torch.FloatTensor([Y_target])\n",
+    "        #print(f\"X input is {X_in}, Y output is {Y_target}\")\n",
+    "        optimizer.zero_grad()\n",
+    "        net_outputs = net(X_in)\n",
+    "        loss = criterion(net_outputs, Y_target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    if verbose == 0:\n",
+    "        if epoch <= 10 or epoch >= (num_epochs - 10):\n",
+    "            print(\"Epoch {} - loss: {}\".format(epoch, loss))\n",
+    "    else:\n",
+    "        print(\"Epoch {} - loss: {}\".format(epoch, loss))\n",
+    "\n",
+    "for i, current_data in enumerate(data):\n",
+    "    X_in_1, X_in_2, Y_target = current_data\n",
+    "    X_in, Y_target = torch.FloatTensor([X_in_1, X_in_2]), torch.FloatTensor([Y_target])\n",
+    "    output = net(torch.FloatTensor(X_in))\n",
+    "    print(\"When x = {}, y = {}\".format(X_in, output))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
