Corrected Post-Training Quantization

--- a/software/[MY_HW4_P1]_Resnet20_Quantized.ipynb
+++ b/software/[MY_HW4_P1]_Resnet20_Quantized.ipynb
@@ -372,34 +372,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "da758824",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/kp/gcrghjyj0mjgl7hlhdvwrxf80000gn/T/ipykernel_81582/1921365199.py:57: DeprecationWarning: <class '__main__.weight_quantization.<locals>.uq'> should not be instantiated. Methods on autograd functions are all static, so you should invoke them on the class itself. Instantiating an autograd function will raise an error in a future version of PyTorch.\n",
-      "  return uq().apply\n"
-     ]
-    }
-   ],
-   "source": [
-    "w_alpha = 4.0  # cliping value\n",
-    "w_bits = 4\n",
-    "\n",
-    "for layer in model.modules():\n",
-    "  if isinstance(layer, torch.nn.Conv2d):\n",
-    "    weight_quant = weight_quantize_fn(w_bit= w_bits)  ## define quant function\n",
-    "    weight_quant.wgt_alpha = torch.tensor(w_alpha)\n",
-    "    w_quant      = weight_quant(layer.weight)\n",
-    "    w_delta      = w_alpha/(2**(w_bits-1)-1)\n",
-    "    w_int        = w_quant/w_delta\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "small-favorite",
    "metadata": {},
@@ -468,6 +440,41 @@
     "        'optimizer': optimizer.state_dict(),\n",
     "    }, is_best, fdir)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daac94bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_alpha = 4.0  # cliping value\n",
+    "w_bits = 4\n",
+    "\n",
+    "for layer in model.modules():\n",
+    "  if isinstance(layer, torch.nn.Conv2d):\n",
+    "    weight_quant = weight_quantize_fn(w_bit= w_bits)  ## define quant function\n",
+    "    weight_quant.wgt_alpha = torch.tensor(w_alpha)\n",
+    "    w_quant      = weight_quant(layer.weight)\n",
+    "    w_delta      = w_alpha/(2**(w_bits-1)-1)\n",
+    "    w_int        = w_quant/w_delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "598c4dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss().cuda()\n",
+    "\n",
+    "model.eval()\n",
+    "model.cuda()\n",
+    "\n",
+    "\n",
+    "prec = validate(testloader, model, criterion)"
    ]
   }
  ],
